[package]
name = "srtlib"
version = "0.1.7"
authors = ["Konstantinos Gavalas <contact@gavalas.dev>"]
edition = "2021"
description = "A simple library for handling .srt subtitle files"
readme = "README.md"
repository = "https://github.com/gavalasdev/srtlib"
license = "MIT OR Apache-2.0"
keywords = ["subtitle", "subtitles", "srt", "parsing", "parser"]
categories = ["filesystem", "parser-implementations"]
exclude = [
    ".github"
]

[dependencies]
encoding_rs = "0.8.24"
